--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ensdomains/ensjs": "^2.0.1",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "apollo-boost": "^0.1.28",
+    "bnc-onboard": "^1.25.0",
+    "ethers": "^5.1.3",
     "graphql": "^14.1.1",
     "react": "^16.8.2",
     "react-apollo": "^2.4.1",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "^3.3.0",
+    "web3": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
